AND-3228 - Simple clear property added to P tag in reset to fix incorrect text wrapping on articles with in-line images on Articles

--- a/ArticleTemplates/assets/scss/base/_reset.scss
+++ b/ArticleTemplates/assets/scss/base/_reset.scss
@@ -52,3 +52,7 @@ a {
         color: color(tone-news-accent);
     }
 }
+
+p {
+    clear: both;
+}
